--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-# Frontend Environment Variables
+# Production Environment Variables
 VITE_API_BASE_URL=https://veilos-backend.onrender.com
 VITE_BACKEND_URL=https://veilos-backend.onrender.com
 VITE_API_URL=https://veilos-backend.onrender.com
