--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-# Frontend Environment Variables
-VITE_API_BASE_URL=https://veilos-backend.onrender.com
-VITE_BACKEND_URL=https://veilos-backend.onrender.com
-VITE_API_URL=https://veilos-backend.onrender.com
+# Frontend Environment Variables - Local Development
+VITE_API_BASE_URL=http://localhost:3000
+VITE_BACKEND_URL=http://localhost:3000
+VITE_API_URL=http://localhost:3000
+
+# Production URLs (comment out for local dev)
+# VITE_API_BASE_URL=https://veilos-backend.onrender.com
+# VITE_BACKEND_URL=https://veilos-backend.onrender.com
+# VITE_API_URL=https://veilos-backend.onrender.com
