--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-# Frontend Environment Variables - Local Development
+# Frontend Environment Variables - Local Development (Backend is down on Render)
 VITE_API_BASE_URL=http://localhost:3000
 VITE_BACKEND_URL=http://localhost:3000
 VITE_API_URL=http://localhost:3000
 
-# Production URLs (comment out for local dev)
+# Production URLs (Render backend is currently down)
 # VITE_API_BASE_URL=https://veilos-backend.onrender.com
 # VITE_BACKEND_URL=https://veilos-backend.onrender.com
 # VITE_API_URL=https://veilos-backend.onrender.com
